// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemDetailInfoBar /> should render correctly 1`] = `
<ItemDetailInfoBar
  portfolio={
    Object {
      "display_name": "baz",
      "name": "quux",
    }
  }
  product={
    Object {
      "created_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
      "distributor": "foo",
      "service_offering_source_ref": "111",
      "updated_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
    }
  }
  source={
    Object {
      "id": "111",
      "name": "bar",
    }
  }
>
  <TextContent
    className="pf-u-mb-md"
  >
    <div
      className="pf-c-content pf-u-mb-md"
    >
      <Text
        className="font-14"
      >
        <p
          className="font-14"
          data-ouia-component-id="OUIA-Generated-Text-1"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
        >
          Platform
        </p>
      </Text>
      <Text
        className="overflow-wrap"
        component="p"
        id="source-name"
      >
        <p
          className="overflow-wrap"
          data-ouia-component-id="OUIA-Generated-Text-2"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
          id="source-name"
        >
          bar
        </p>
      </Text>
      <Text
        className="font-14"
      >
        <p
          className="font-14"
          data-ouia-component-id="OUIA-Generated-Text-3"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
        >
          Portfolio
        </p>
      </Text>
      <Text
        className="overflow-wrap"
        component="p"
        id="portfolio-name"
      >
        <p
          className="overflow-wrap"
          data-ouia-component-id="OUIA-Generated-Text-4"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
          id="portfolio-name"
        >
          quux
        </p>
      </Text>
      <span
        id="distributor"
      >
        <Text
          className="font-14"
        >
          <p
            className="font-14"
            data-ouia-component-id="OUIA-Generated-Text-5"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe={true}
            data-pf-content={true}
          >
            Vendor
          </p>
        </Text>
        <Text
          className="overflow-wrap"
          component="p"
        >
          <p
            className="overflow-wrap"
            data-ouia-component-id="OUIA-Generated-Text-6"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe={true}
            data-pf-content={true}
          >
            foo
          </p>
        </Text>
      </span>
      <Text
        className="font-14"
      >
        <p
          className="font-14"
          data-ouia-component-id="OUIA-Generated-Text-7"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
        >
          Created
        </p>
      </Text>
      <Text
        component="p"
        id="created_at"
      >
        <p
          className=""
          data-ouia-component-id="OUIA-Generated-Text-8"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
          id="created_at"
        >
          <DateFormat
            date="Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)"
            variant="relative"
          >
            <Tooltip
              content={
                <div>
                  
                  22 Mar 2019 07:36 UTC
                </div>
              }
            >
              <Popper
                appendTo={[Function]}
                distance={15}
                enableFlip={true}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                isVisible={false}
                onBlur={[Function]}
                onDocumentClick={false}
                onDocumentKeyDown={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTriggerEnter={[Function]}
                placement="top"
                popper={
                  <div
                    className="pf-c-tooltip"
                    id="pf-tooltip-1"
                    role="tooltip"
                    style={
                      Object {
                        "maxWidth": null,
                        "opacity": 0,
                        "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                      }
                    }
                  >
                    <TooltipArrow />
                    <TooltipContent
                      isLeftAligned={false}
                    >
                      <div>
                        
                        22 Mar 2019 07:36 UTC
                      </div>
                    </TooltipContent>
                  </div>
                }
                popperMatchesTriggerWidth={false}
                positionModifiers={
                  Object {
                    "bottom": "pf-m-bottom",
                    "bottom-end": "pf-m-bottom-right",
                    "bottom-start": "pf-m-bottom-left",
                    "left": "pf-m-left",
                    "left-end": "pf-m-left-bottom",
                    "left-start": "pf-m-left-top",
                    "right": "pf-m-right",
                    "right-end": "pf-m-right-bottom",
                    "right-start": "pf-m-right-top",
                    "top": "pf-m-top",
                    "top-end": "pf-m-top-right",
                    "top-start": "pf-m-top-left",
                  }
                }
                trigger={
                  <span>
                    Just now
                  </span>
                }
                zIndex={9999}
              >
                <FindRefWrapper
                  onFoundRef={[Function]}
                >
                  <span>
                    Just now
                  </span>
                </FindRefWrapper>
              </Popper>
            </Tooltip>
          </DateFormat>
        </p>
      </Text>
    </div>
  </TextContent>
</ItemDetailInfoBar>
`;

exports[`<ItemDetailInfoBar /> should render correctly with fallback values without vendor 1`] = `
<ItemDetailInfoBar
  portfolio={
    Object {
      "name": "quux",
    }
  }
  product={
    Object {
      "created_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
      "service_offering_source_ref": "111",
    }
  }
  source={
    Object {
      "id": "111",
      "name": "bar",
    }
  }
>
  <TextContent
    className="pf-u-mb-md"
  >
    <div
      className="pf-c-content pf-u-mb-md"
    >
      <Text
        className="font-14"
      >
        <p
          className="font-14"
          data-ouia-component-id="OUIA-Generated-Text-9"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
        >
          Platform
        </p>
      </Text>
      <Text
        className="overflow-wrap"
        component="p"
        id="source-name"
      >
        <p
          className="overflow-wrap"
          data-ouia-component-id="OUIA-Generated-Text-10"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
          id="source-name"
        >
          bar
        </p>
      </Text>
      <Text
        className="font-14"
      >
        <p
          className="font-14"
          data-ouia-component-id="OUIA-Generated-Text-11"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
        >
          Portfolio
        </p>
      </Text>
      <Text
        className="overflow-wrap"
        component="p"
        id="portfolio-name"
      >
        <p
          className="overflow-wrap"
          data-ouia-component-id="OUIA-Generated-Text-12"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
          id="portfolio-name"
        >
          quux
        </p>
      </Text>
      <Text
        className="font-14"
      >
        <p
          className="font-14"
          data-ouia-component-id="OUIA-Generated-Text-13"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
        >
          Created
        </p>
      </Text>
      <Text
        component="p"
        id="created_at"
      >
        <p
          className=""
          data-ouia-component-id="OUIA-Generated-Text-14"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
          id="created_at"
        >
          <DateFormat
            date="Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)"
            variant="relative"
          >
            <Tooltip
              content={
                <div>
                  
                  22 Mar 2019 07:36 UTC
                </div>
              }
            >
              <Popper
                appendTo={[Function]}
                distance={15}
                enableFlip={true}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                isVisible={false}
                onBlur={[Function]}
                onDocumentClick={false}
                onDocumentKeyDown={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTriggerEnter={[Function]}
                placement="top"
                popper={
                  <div
                    className="pf-c-tooltip"
                    id="pf-tooltip-2"
                    role="tooltip"
                    style={
                      Object {
                        "maxWidth": null,
                        "opacity": 0,
                        "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                      }
                    }
                  >
                    <TooltipArrow />
                    <TooltipContent
                      isLeftAligned={false}
                    >
                      <div>
                        
                        22 Mar 2019 07:36 UTC
                      </div>
                    </TooltipContent>
                  </div>
                }
                popperMatchesTriggerWidth={false}
                positionModifiers={
                  Object {
                    "bottom": "pf-m-bottom",
                    "bottom-end": "pf-m-bottom-right",
                    "bottom-start": "pf-m-bottom-left",
                    "left": "pf-m-left",
                    "left-end": "pf-m-left-bottom",
                    "left-start": "pf-m-left-top",
                    "right": "pf-m-right",
                    "right-end": "pf-m-right-bottom",
                    "right-start": "pf-m-right-top",
                    "top": "pf-m-top",
                    "top-end": "pf-m-top-right",
                    "top-start": "pf-m-top-left",
                  }
                }
                trigger={
                  <span>
                    Just now
                  </span>
                }
                zIndex={9999}
              >
                <FindRefWrapper
                  onFoundRef={[Function]}
                >
                  <span>
                    Just now
                  </span>
                </FindRefWrapper>
              </Popper>
            </Tooltip>
          </DateFormat>
        </p>
      </Text>
    </div>
  </TextContent>
</ItemDetailInfoBar>
`;

exports[`<ItemDetailInfoBar /> should render correctly with vendor 1`] = `
<ItemDetailInfoBar
  distributor="Foo distributor"
  portfolio={
    Object {
      "display_name": "baz",
      "name": "quux",
    }
  }
  product={
    Object {
      "created_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
      "distributor": "foo",
      "service_offering_source_ref": "111",
      "updated_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
    }
  }
  source={
    Object {
      "id": "111",
      "name": "bar",
    }
  }
>
  <TextContent
    className="pf-u-mb-md"
  >
    <div
      className="pf-c-content pf-u-mb-md"
    >
      <Text
        className="font-14"
      >
        <p
          className="font-14"
          data-ouia-component-id="OUIA-Generated-Text-15"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
        >
          Platform
        </p>
      </Text>
      <Text
        className="overflow-wrap"
        component="p"
        id="source-name"
      >
        <p
          className="overflow-wrap"
          data-ouia-component-id="OUIA-Generated-Text-16"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
          id="source-name"
        >
          bar
        </p>
      </Text>
      <Text
        className="font-14"
      >
        <p
          className="font-14"
          data-ouia-component-id="OUIA-Generated-Text-17"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
        >
          Portfolio
        </p>
      </Text>
      <Text
        className="overflow-wrap"
        component="p"
        id="portfolio-name"
      >
        <p
          className="overflow-wrap"
          data-ouia-component-id="OUIA-Generated-Text-18"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
          id="portfolio-name"
        >
          quux
        </p>
      </Text>
      <span
        id="distributor"
      >
        <Text
          className="font-14"
        >
          <p
            className="font-14"
            data-ouia-component-id="OUIA-Generated-Text-19"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe={true}
            data-pf-content={true}
          >
            Vendor
          </p>
        </Text>
        <Text
          className="overflow-wrap"
          component="p"
        >
          <p
            className="overflow-wrap"
            data-ouia-component-id="OUIA-Generated-Text-20"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe={true}
            data-pf-content={true}
          >
            foo
          </p>
        </Text>
      </span>
      <Text
        className="font-14"
      >
        <p
          className="font-14"
          data-ouia-component-id="OUIA-Generated-Text-21"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
        >
          Created
        </p>
      </Text>
      <Text
        component="p"
        id="created_at"
      >
        <p
          className=""
          data-ouia-component-id="OUIA-Generated-Text-22"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe={true}
          data-pf-content={true}
          id="created_at"
        >
          <DateFormat
            date="Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)"
            variant="relative"
          >
            <Tooltip
              content={
                <div>
                  
                  22 Mar 2019 07:36 UTC
                </div>
              }
            >
              <Popper
                appendTo={[Function]}
                distance={15}
                enableFlip={true}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                isVisible={false}
                onBlur={[Function]}
                onDocumentClick={false}
                onDocumentKeyDown={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTriggerEnter={[Function]}
                placement="top"
                popper={
                  <div
                    className="pf-c-tooltip"
                    id="pf-tooltip-3"
                    role="tooltip"
                    style={
                      Object {
                        "maxWidth": null,
                        "opacity": 0,
                        "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                      }
                    }
                  >
                    <TooltipArrow />
                    <TooltipContent
                      isLeftAligned={false}
                    >
                      <div>
                        
                        22 Mar 2019 07:36 UTC
                      </div>
                    </TooltipContent>
                  </div>
                }
                popperMatchesTriggerWidth={false}
                positionModifiers={
                  Object {
                    "bottom": "pf-m-bottom",
                    "bottom-end": "pf-m-bottom-right",
                    "bottom-start": "pf-m-bottom-left",
                    "left": "pf-m-left",
                    "left-end": "pf-m-left-bottom",
                    "left-start": "pf-m-left-top",
                    "right": "pf-m-right",
                    "right-end": "pf-m-right-bottom",
                    "right-start": "pf-m-right-top",
                    "top": "pf-m-top",
                    "top-end": "pf-m-top-right",
                    "top-start": "pf-m-top-left",
                  }
                }
                trigger={
                  <span>
                    Just now
                  </span>
                }
                zIndex={9999}
              >
                <FindRefWrapper
                  onFoundRef={[Function]}
                >
                  <span>
                    Just now
                  </span>
                </FindRefWrapper>
              </Popper>
            </Tooltip>
          </DateFormat>
        </p>
      </Text>
    </div>
  </TextContent>
</ItemDetailInfoBar>
`;
